tests/ui/types_not_equal.rs
#[vecn::vector]
struct TupleStruct(f32, f64);

#[vecn::vector]
struct NamedStruct {
    x: f32,
    y: f64,
}

fn main() {}
